# Seekbar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  seekbar.spec
.github/: zizmor.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: seekbar.icns
scripts/: export_icon.py
src/filefinder/: __main__.py  app.py
src/seekbar/: __main__.py  _autostart_linux.py  _autostart_macos.py  _autostart_windows.py  _hotkey_linux.py  _hotkey_macos.py  _locate.py  _mft.py  _spotlight.py  _subprocess_search.py  app.py  autostart.py  constants.py  content.py  delegate.py  filetypes.py  hotkey.py  icons.py  model.py  search.py  settings.py  single_instance.py  styles.py  theme.py
tests/: conftest.py  test_app.py  test_autostart.py  test_filetypes.py  test_hotkey.py  test_hotkey_linux.py  test_hotkey_macos.py  test_locate.py  test_mft.py  test_search.py  test_spotlight.py  test_subprocess_search.py  test_theme.py
