[project]
name = "seekbar"
version = "0.1.0"
description = "Instant cross-platform file search with native backends"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "Solganis"}]
dependencies = ["PySide6>=6.11.1"]

[project.scripts]
seekbar = "seekbar.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/seekbar"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"src/seekbar/app.py" = ["S603", "S607"]
"tests/**/*.py" = ["S101", "PLR2004", "SLF001", "INP001", "ANN", "TC002", "PLW0108", "I001", "FBT"]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
qt_api = "pyside6"
testpaths = ["tests"]

[tool.coverage.run]
source = ["seekbar"]
omit = ["*/__main__.py", "*/_spotlight.py", "*/_locate.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
    "pytest-cov>=7.1.0",
    "pyinstaller>=6.21.0",
    "assertpy2>=2.5.1",
]
