[project]
name = "seekbar"
dynamic = ["version"]
description = "Cross-platform file search with native backends"
requires-python = ">=3.14"
license = "MIT"
authors = [{name = "Solganis"}]
dependencies = ["PySide6>=6.11.1"]

[project.scripts]
seekbar = "seekbar.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/seekbar/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/seekbar"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
# scripts are standalone dev tools: not an importable package (INP001) and may print to stdout (T201)
"scripts/**/*.py" = ["INP001", "T201"]
"src/seekbar/app.py" = ["S603", "S607"]
"tests/**/*.py" = ["S101", "PLR2004", "SLF001", "INP001", "ANN", "TC002", "PLW0108", "I001", "FBT"]

[tool.ty.environment]
python-version = "3.14"
# pin the platform so ty resolves the same Windows view on every CI runner (tests reference
# win32-only symbols like _HotkeyFilter; without this, ty fails on the Linux lint runner)
python-platform = "win32"

[tool.pytest.ini_options]
qt_api = "pyside6"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["seekbar"]
omit = [
    "*/__main__.py",
    "*/_spotlight.py",
    "*/_locate.py",
    "*/_autostart_macos.py",
    "*/_autostart_linux.py",
    "*/_hotkey_macos.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
    "pytest>=9.1.1",
    "pytest-qt>=4.5.0",
    "pytest-cov>=7.1.0",
    "pyinstaller>=6.21.0",
    "assertpy2>=2.11.0",
    "hypothesis>=6.155.7",
]
